--- a/config/reviung41.conf
+++ b/config/reviung41.conf
@@ -1,3 +1,8 @@
 # Uncomment the following lines to enable RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=10
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=20
+CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
