--- a/config/reviung41.conf
+++ b/config/reviung41.conf
@@ -7,7 +7,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=240
 #CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=3
 #CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
 #CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
-# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
-# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 #CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=75
 # CONFIG_ZMK_IDLE_TIMEOUT=30000
