--- a/config/reviung41.conf
+++ b/config/reviung41.conf
@@ -2,8 +2,8 @@
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=240
-# CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=10
-# CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=20
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=10
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=20
 #CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=3
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
